# vessel

./: .gitignore  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/shaders/: plasma_fragment.glsl  plasma_vertex.glsl
app/src/main/cpp/: CMakeLists.txt  aaudio_player.cpp  aaudio_player.h  audio_buffer.cpp  audio_buffer.h  grain.cpp  grain.h  granular_engine.cpp  granular_engine.h  jni_bridge.cpp
app/src/main/java/com/vessel/: ArActivity.kt  GranularBridge.kt  MediaPipeHandTracker.kt  MenuActivity.kt  PlasmaRenderer.kt  RecordingManager.kt  VideoImporter.kt
app/src/main/res/layout/: activity_ar.xml  activity_menu.xml
app/src/main/res/mipmap-mdpi/: ic_launcher.xml
app/src/main/res/values/: strings.xml  styles.xml
